# refactoring

./: CMakeLists.txt  README.md  main.cpp
include/: Board.h  Die.h  Field.h  MonopolyGame.h  Player.h  Pole.h
src/: Board.cpp  Field.cpp  MonopolyGame.cpp  Player.cpp  Pole.cpp
